.metadata/.plugins/org.eclipse.cdt.ui/ex2.build.log
16:15:04 **** Incremental Build of configuration Debug for project ex2 ****
make -j8 all 
arm-none-eabi-gcc "../Core/Src/main.c" -mcpu=cortex-m3 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F103x6 -c -I../Core/Inc -I../Drivers/STM32F1xx_HAL_Driver/Inc -I../Drivers/STM32F1xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32F1xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -MMD -MP -MF"Core/Src/main.d" -MT"Core/Src/main.o" --specs=nano.specs -mfloat-abi=soft -mthumb -o "Core/Src/main.o"
../Core/Src/main.c: In function 'main':
../Core/Src/main.c:180:3: warning: implicit declaration of function 'HAL_TIM_Base_Start_IT'; did you mean 'HAL_DMA_Start_IT'? [-Wimplicit-function-declaration]
  180 |   HAL_TIM_Base_Start_IT(&htim3);
      |   ^~~~~~~~~~~~~~~~~~~~~
      |   HAL_DMA_Start_IT
../Core/Src/main.c:180:26: error: 'htim3' undeclared (first use in this function)
  180 |   HAL_TIM_Base_Start_IT(&htim3);
      |                          ^~~~~
../Core/Src/main.c:180:26: note: each undeclared identifier is reported only once for each function it appears in
make: *** [Core/Src/subdir.mk:34: Core/Src/main.o] Error 1
"make -j8 all" terminated with exit code 2. Build might be incomplete.

16:15:04 Build Failed. 2 errors, 1 warnings. (took 212ms)

